--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node": "14.x"
+    "node": "16.16.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
