--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
-  "build": [{ "src": "./app.js", "use": "@vercel/node" }],
-  "routes": [
+  "builds": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "./app.js",
+      "use": "@vercel/node"
     }
-  ]
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
 }
